<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="format_int_kcal">%d kcal</string>
    <string name="bnv_main_diary">Diary</string>
    <string name="bnv_main_articles">Articles</string>
    <string name="bnv_main_plan">Plans</string>
    <string name="bnv_main_recipes">Recipes</string>
    <string name="bnv_main_profile">Profile</string>
    <string name="item_food_template_name">name</string>
    <string name="item_food_template_count">0 food</string>
    <string name="value_00" translatable="false">00</string>
    <string name="main_screen_topbar_string">%d of %d g</string>
    <string name="privacy_policy_title">View terms and conditions</string>
    <string name="welcome">Welcome :)</string>
    <string name="hello">Hi \u0020</string>
    <string name="auth_user_using_existing_account">A user with that email address already exists</string>
    <string name="session_expired">Connection timed out</string>
    <string name="auth_user_not_found">User not found</string>
    <string name="no_internet">No internet connection :*(</string>
    <string name="failed_logIn">Login failed</string>
    <string name="constraint_error_username_min_length">The minimum login length is five characters</string>
    <string name="constraint_error_password_min_length">The minimum password length is six characters</string>
    <string name="auth_user_password_missmatch">Invalid password</string>
    <string name="auth_user_email_missmatch">Invalid email address</string>
    <string name="auth_wrong_credentials">Check the information you provided</string>
    <string name="auth_in_use_email">This email address is already in use!</string>
    <string name="auth_wrong_email">Check the email address you provided!</string>
    <string name="forgot_pass_check_email">Check your inbox!</string>
    <string name="forgot_pass_wrong_user">User not found</string>
    <string name="auth_pass_with_space">The password must not contain spaces</string>
    <string name="auth_state_logging_in">Signing in</string>
    <string name="privacy_policy_link_span_text">Privacy Policy</string>
    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="onboard_height_title">Calculating your intake</string>
    <string name="onboard_weight_title">Calculating your intake</string>
    <string name="onboard_birthday_title">What is your birthday?</string>
    <string name="onboard_activity_title">Great!</string>
    <string name="water_achievement_title_2">Congratulations!</string>
    <string name="water_achievement_txt_2">You have reached your daily water intake. Keep up the good work!</string>
    <string name="alert_dialog_grade_if_like">If you like our app, \nplease take a moment to rate and review it.</string>
    <string name="check_your_name">Enter your name</string>
    <string name="activity_profile_future_value">Future values</string>
    <string name="activity_profile_current_value">Your value</string>
    <string name="activity_profile_settings_settings">Settings</string>
    <string name="profile_female">Female</string>
    <string name="profile_male">Male</string>
    <string name="save">save</string>
    <string name="prem_title_settings">Improve your indicators!</string>
    <string name="text_prem_settings">Exclusive articles from leading \nnutritionists and athletes, as well as \nlots of recipes!</string>
    <string name="btn_settings_prem">become better</string>
    <string name="plans">Diets</string>
    <string name="plan">Diet</string>
    <string name="activity_blocked_detail_plans_recipes">recipes</string>
    <string name="activity_blocked_detail_plans_users">users</string>
    <string name="activity_blocked_detail_plans_motivation" translatable="false">A highly motivational text that will boost your confidence in yourself and your abilities.</string>
    <string name="activity_blocked_recipe_0_kcal">0 kcal per serving</string>
    <string name="leavePlan">Leave diet</string>
    <string name="sharePlan">Share</string>
    <string name="load_recipe_plan_up">Load previous</string>
    <string name="load_recipe_plan_down">Load next</string>
    <string name="days">days</string>
    <string name="join">Join</string>
    <string name="add">Add</string>
    <string name="activity_plan_recipes_0_kcal">0 kcal per serving</string>
    <string name="activity_plan_recipes_method">Cooking method</string>
    <string name="fragment_adding_recipe_result_description">Recipe description</string>
    <string name="fragment_adding_recipe_result_name">Recipe name</string>
    <string name="fragment_adding_recipe_result_time">Cooking time (min.)</string>
    <string name="fragment_adding_recipe_result_complexity">Difficulty</string>
    <string name="fragment_current_day_plan_days">Day 0/0</string>
    <string name="main_detail_plans_recipe_item_added">Recipe added</string>
    <string name="main_detail_plans_recipe_item_175_kcal">175 kcal </string>
    <string name="main_detail_plans_recipe_item_some_name">Olive, Avocado, and Feta Salad</string>
    <string name="plans_header_item_n_recipes">324 recipes</string>
    <string name="plans_header_item_n_days">28 days</string>
    <string name="plans_header_item_n_day_of_x">Day 0 of 28</string>
    <string name="vertical_detail_plan_adapter_not_selected">You haven\'t selected anything</string>
    <string name="vertical_detail_plan_adapter_in_diary">You made the following journal entry:\u0020</string>
    <string name="vertical_detail_plan_adapter_day">Day %d</string>
    <string name="vertical_detail_plan_adapter_day_of_days">Day %d of %d</string>
    <plurals name="day_plurals">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <plurals name="recipe_plurals">
        <item quantity="one">recipe</item>
        <item quantity="other">recipes</item>
    </plurals>
    <plurals name="foods_count">
        <item quantity="one">%d food</item>
        <item quantity="other">%d foods</item>
    </plurals>
    <string name="favoriteRecipe">Liked</string>
    <string name="own_food">my foods</string>
    <string name="btnAddTemplate">Create template</string>
    <string name="plan_start_text">Don\'t know where to start? Try diets from our in-house nutritionist.</string>
    <string name="view_plans">View diets</string>
    <string name="view_other_plans">Select a different diet</string>
    <string name="plan_end_text">Your diet is over. Congratulations!</string>
    <string name="titleShareDialogPlan">Share diet</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnChange">Change</string>
    <string name="tvInfo">Are you sure you want to change your diet? \nYour %s diet will be closed.</string>
    <string name="planDays">Day %d/%d</string>
    <plurals name="daysAtRow">
        <item quantity="one">%d day in a row logged</item>
        <item quantity="other">%d days in a row logged</item>
    </plurals>
    <string name="subTestText">Try it for free for seven days\n After that, it\'s 199 rubles/month</string>
    <string name="nameTemplate">Template name</string>
    <string name="eatingTemplate">Category:</string>
    <string name="contextMenuDelete">Delete</string>
    <string name="contextMenuEdit">Edit</string>
    <string name="addTemplate">Add template</string>
    <string name="templates">Templates</string>
    <string name="tvMG">mg</string>
    <string name="tvGram">g</string>
    <string name="tvKkal">kcal</string>
    <string name="tvKkal0">0 kcal</string>
    <string name="btnRecipeDiary">Add to diary</string>
    <string name="btnRecipePrem">Upgrade to Premium</string>
    <string name="tvRecipePrem">Get a Premium subscription, and you\'ll \n
                                get recipes \n
                                selected just for you \n
                                by our nutritionists.</string>
    <string name="intro_title">Welcome to</string>
    <string name="intro_text_1">Lots of scientific articles about healthy eating</string>
    <string name="intro_text_2">Everyday healthy recipes</string>
    <string name="intro_text_3">Conveniently track your achievements</string>
    <string name="dialog_load_title">Loading</string>
    <string name="auth_phone_wrong_number">Check the number you provided!</string>
    <string name="auth_phone_wrong_code">Check the email address you provided!</string>
    <string name="auth_gender_btn_m">M</string>
    <string name="auth_gender_btn_f">F</string>
    <string name="subsc_btn_bay">upgrade to Premium</string>
    <string name="policy_action_title">Privacy Policy</string>
    <string name="repeat_none">Once</string>
    <string name="repeat_hour">Every hour</string>
    <string name="repeat_two_hours">Every two hours</string>
    <string name="repeat_three_hours">Every three hours</string>
    <string name="repeat_four_hours">Every four hours</string>
    <string name="repeat_day">Every day</string>
    <string name="repeat_weak">Every week</string>
    <string name="repeat_month">Every month</string>
    <string name="spk_check_your_age">Check your age</string>
    <string name="spk_check_your_height">Check the height you provided</string>
    <string name="spk_check_weight">Check the weight you provided</string>
    <string name="Premium" translatable="false">Premium</string>
    <string name="auth_gender_tv_q">Укажите ваш пол</string>
    <string name="level_none" translatable="false">Минимальная нагрузка</string>
    <string name="level_easy" translatable="false">Малоактивный</string>
    <string name="level_medium" translatable="false">Среднеактивный</string>
    <string name="level_hard" translatable="false">Интенсивная нагрузка</string>
    <string name="level_up_hard" translatable="false">Ежедневные тренировки</string>
    <string name="level_super" translatable="false">Ежедневные интенсивные тренировки</string>
    <string name="level_up_super" translatable="false">Сверхтяжелые нагрузки</string>
    <string name="premium_feature_title">Lose weight\n without stress or strict diets with\n</string>
    <string name="premium_feature_exclusive_articles">Exclusive articles</string>
    <string name="premium_feature_exclusive_articles_description">You\'ll get access to articles from a popular nutritionist and fitness trainer</string>
    <string name="premium_feature_exclusive_recipes">Recipe database</string>
    <string name="premium_feature_exclusive_recipes_description">Easy-to-cook, affordable, delicious recipes with CPFC data</string>
    <string name="premium_feature_personal_settings_description">View and adjust your CPFC level</string>
    <string name="premium_feature_personal_settings">Personalized settings</string>
    <string name="premium_feature_measurements">Body measurements</string>
    <string name="premium_feature_measurements_description">Track your progress with detailed body measurement analysis</string>
    <string name="premium_feature_exclusive_plans_description">Ready-made meal plans for every taste and goal</string>
    <string name="premium_feature_exclusive_plans">Meal plans</string>
    <string name="premium_features_comparison">EVERYTHING IS EASIER WITH PREMIUM</string>
    <string name="premium_comparision_basic_title" translatable="false">Basic</string>
    <string name="premium_comparision_premium" translatable="false">Premium</string>
    <string name="action_buy">Buy</string>
    <string name="privacy_policy_with_condtions">Privacy Policy and\nterms of use</string>
    <string name="premium_client_says_about_us">SATISFIED CLIENTS</string>
    <string name="srch_prem_elements">Microelements</string>
    <string name="srch_text_prem">Want to know if you have enough vitamins and \nminerals you eat with food? Then \n</string>
    <string name="srch_connect_prem">connect premium</string>
</resources>