<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/activity_none"
        android:title="@string/level_none"/>

    <item
        android:id="@+id/activity_easy"
        android:title="@string/level_easy"/>

    <item
        android:id="@+id/activity_medium"
        android:title="@string/level_medium"/>
    <item
        android:id="@+id/activity_hard"
        android:title="@string/level_hard"/>

    <item
        android:id="@+id/activity_up_hard"
        android:title="@string/level_up_hard"/>

    <item
        android:id="@+id/activity_super"
        android:title="@string/level_super"/>
    <item
        android:id="@+id/activity_up_super"
        android:title="@string/level_up_super"/>
</menu>