<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bnv_main_diary"
        android:icon="@drawable/bnv_main_diary"
        android:title="@string/bnv_main_diary" />

    <item
        android:id="@+id/bnv_main_articles"
        android:icon="@drawable/bnv_main_articles"
        android:title="@string/bnv_main_articles" />

    <item
        android:id="@+id/bnv_main_trainer"
        android:icon="@drawable/bnv_main_trainer"
        android:title="@string/bnv_main_trainer" />


    <item
        android:id="@+id/bnv_main_recipes"
        android:icon="@drawable/bnv_main_recipes"
        android:title="@string/bnv_main_recipes" />

    <item
        android:id="@+id/bnv_main_profile"
        android:icon="@drawable/bnv_main_profile"
        android:title="@string/bnv_main_profile" />
</menu>