<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rgRepeatCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19">

        <RadioButton
            android:id="@+id/rbRepeatCountNullRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_none" />

        <RadioButton
            android:id="@+id/rbRepeatCountEveryHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_hour" />

        <RadioButton
            android:id="@+id/rbRepeatCountEveryTwoHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_two_hours" />

        <RadioButton
            android:id="@+id/rbRepeatCountEveryThreeHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_three_hours" />

        <RadioButton
            android:id="@+id/rbRepeatCountEveryFourHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_four_hours" />

        <RadioButton
            android:id="@+id/rbRepeatCountEveryDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_day" />

        <RadioButton
            android:id="@+id/rbRepeatCountEveryWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_weak" />

        <RadioButton
            android:id="@+id/rbRepeatCountEveryMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_month" />


    </RadioGroup>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Как часто напоминать?"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>