<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    android:elevation="3dp"
    app:cardElevation="1dp"
    android:translationY="-80dp"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >


    <ImageView
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="140dp"
        android:src="@drawable/srch_star"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/srch_prem_elements"
        android:textColor="#f49231"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/tvPremText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/srch_text_prem"
        android:textColor="#91000000"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/btnShowPrem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/btn_elements_prem"
        android:fontFamily="@font/roboto_bold"
        android:paddingEnd="32dp"
        android:paddingStart="32dp"
        android:text="@string/srch_connect_prem"
        android:textColor="#ef7d02"
        />

  </LinearLayout>

</androidx.cardview.widget.CardView>